Layout da tela de detalhes do produto finalizado

--- a/Frontend/detalhes.html
+++ b/Frontend/detalhes.html
@@ -22,7 +22,42 @@
       </nav>
     </header>
     <section id="card-details" class="container">
-      <div class="card">asaaafafasf</div>
+      <div class="card mb20">
+        <div class="card-top">
+          <img src="assets/image 3.svg" alt="computador" />
+        </div>
+        <div class="card-bottom">
+          <h3>R$ 5000,00</h3>
+          <h4>Computador Gamer XT</h4>
+          <p>
+            Lorem Ipsum is simply dummy text of the printing and typesetting
+            industry. Lorem Ipsum has been the industry's standard d ummy text
+            ever since the 1500s, when an unknown printer took a galley of type
+            and scrambled it to make a type specimen book. It has survived not
+            only five centuries, but also the leap into electronic typesetting,
+            remaining essentially unchanged. It was popularised in the 1960s
+            with the release of Letraset sheets containing Lorem Ipsum passages,
+            and more recently with desktop publishing software like Aldus
+            PageMaker including versions of Lorem Ipsum.
+          </p>
+          <div class="category-container">
+          <div class="card-category">
+            Eletrônicos
+          </div>
+          <div class="card-category">
+            Computadores
+          </div>
+        </div>
+        </div>
+      </div>
+      <div class="btn-container">
+        <div class="btn btn-blue">
+          Comprar
+        </div>
+        <div class="btn btn-white">
+          Início
+        </div>
+      </div>
     </section>
   </body>
 </html>
