html e css da tela de carrinho de compras

--- a/Frontend/detalhes.html
+++ b/Frontend/detalhes.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -6,6 +7,7 @@
     <title>DSCommerce</title>
 
     <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/details.css" />
   </head>
   <body>
     <header>
@@ -21,12 +23,12 @@
         <a href="#">Entrar</a>
       </nav>
     </header>
-    <section id="card-details" class="container">
-      <div class="card mb20">
-        <div class="card-top">
+    <section id="product-details" class="container">
+      <div class="card">
+        <div class="product-details-top line-bottom">
           <img src="assets/image 3.svg" alt="computador" />
         </div>
-        <div class="card-bottom">
+        <div class="product-details-bottom">
           <h3>R$ 5000,00</h3>
           <h4>Computador Gamer XT</h4>
           <p>
