Aplicando prefixo para nomes de classes CSS

--- a/Frontend/detalhes.html
+++ b/Frontend/detalhes.html
@@ -6,16 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DSCommerce</title>
 
-    <link rel="stylesheet" href="./css/styles.css" />
     <link rel="stylesheet" href="./css/details.css" />
   </head>
   <body>
     <header>
-      <nav class="container">
+      <nav class="dsc-container">
         <h1>DSCommerce</h1>
         <a href="#">
           <img
-            class="carrinho"
+            class="dsc-carrinho"
             src="assets/cart-fill-svgrepo-com 1.svg"
             alt="images"
           />
@@ -23,12 +22,12 @@
         <a href="#">Entrar</a>
       </nav>
     </header>
-    <section id="product-details" class="container">
-      <div class="card">
-        <div class="product-details-top line-bottom">
+    <section id="product-details-section" class="dsc-container">
+      <div class="dsc-card">
+        <div class="dsc-product-details-top dsc-line-bottom">
           <img src="assets/image 3.svg" alt="computador" />
         </div>
-        <div class="product-details-bottom">
+        <div class="dsc-product-details-bottom">
           <h3>R$ 5000,00</h3>
           <h4>Computador Gamer XT</h4>
           <p>
@@ -42,21 +41,21 @@
             and more recently with desktop publishing software like Aldus
             PageMaker including versions of Lorem Ipsum.
           </p>
-          <div class="category-container">
-          <div class="card-category">
+          <div class="dsc-category-container">
+          <div class="dsc-card-category">
             Eletrônicos
           </div>
-          <div class="card-category">
+          <div class="dsc-card-category">
             Computadores
           </div>
         </div>
         </div>
       </div>
-      <div class="btn-container">
-        <div class="btn btn-blue">
+      <div class="dsc-btn-container">
+        <div class="btn dsc-btn-blue">
           Comprar
         </div>
-        <div class="btn btn-white">
+        <div class="btn dsc-btn-white">
           Início
         </div>
       </div>
