--- a/Frontend/carrinho.html
+++ b/Frontend/carrinho.html
@@ -6,16 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DSCommerce</title>
 
-    <link rel="stylesheet" href="./css/styles.css" />
     <link rel="stylesheet" href="./css/cart.css" />
   </head>
   <body>
     <header>
-      <nav class="container">
+      <nav class="dsc-container">
         <h1>DSCommerce</h1>
         <a href="#">
           <img
-            class="carrinho"
+            class="dsc-carrinho"
             src="assets/cart-fill-svgrepo-com 1.svg"
             alt="images"
           />
@@ -23,56 +22,56 @@
         <a href="#">Entrar</a>
       </nav>
     </header>
-    <section id="cart-container" class="container">
-      <div class="card">
-          <div class="cart-item-container line-bottom">
-            <div class="cart-item-left">
+    <section id="cart-container-section" class="dsc-container">
+      <div class="dsc-card">
+          <div class="dsc-cart-item-container dsc-line-bottom">
+            <div class="dsc-cart-item-left">
               <img
               src="assets/image 3.svg"
               alt="computador"
               />
-              <div class="cart-item-description">
+              <div class="dsc-cart-item-description">
                 <h3>Computador Gamer XT</h3>
-                <div class="cart-item-quantity-container">
-                <div class="cart-item-decrement">-</div>
+                <div class="dsc-cart-item-quantity-container">
+                <div class="dsc-cart-item-decrement">-</div>
                 <p>1</p>
-                <div class="cart-item-increment">+</div>
+                <div class="dsc-cart-item-increment">+</div>
               </div>
               </div>
             </div> 
-            <div class="cart-item-right">
+            <div class="dsc-cart-item-right">
               R$ 5000,00
             </div> 
         </div>
-        <div class="cart-item-container line-bottom">
-          <div class="cart-item-left">
+        <div class="dsc-cart-item-container dsc-line-bottom">
+          <div class="dsc-cart-item-left">
             <img
             src="assets/image 3.svg"
             alt="computador"
             />
-            <div class="cart-item-description">
+            <div class="dsc-cart-item-description">
               <h3>Computador Gamer XT</h3>
-              <div class="cart-item-quantity-container">
-              <div class="cart-item-decrement">-</div>
+              <div class="dsc-cart-item-quantity-container">
+              <div class="dsc-cart-item-decrement">-</div>
               <p>2</p>
-              <div class="cart-item-increment">+</div>
+              <div class="dsc-cart-item-increment">+</div>
             </div>
             </div>
           </div> 
-          <div class="cart-item-right">
+          <div class="dsc-cart-item-right">
             R$ 10000,00
           </div> 
         </div>
-        <div class="cart-total-container">
+        <div class="dsc-cart-total-container">
          <h3>R$ 15000,00</h3>
         </div>
         </div>
       </div>
-      <div class="btn-container">
-        <div class="btn btn-blue">
+      <div class="dsc-btn-container">
+        <div class="btn dsc-btn-blue">
           Finalizar pedido
         </div>
-        <div class="btn btn-white">
+        <div class="btn dsc-btn-white">
           Continuar comprando
         </div>
       </div>
