--- a/Frontend/detalhes.html
+++ b/Frontend/detalhes.html
@@ -8,22 +8,16 @@
 
     <link rel="stylesheet" href="./css/details.css" />
   </head>
+  <main>
   <body>
     <header>
       <nav class="dsc-container">
         <h1>DSCommerce</h1>
-        <a href="#">
-          <img
-            class="dsc-carrinho"
-            src="assets/cart-fill-svgrepo-com 1.svg"
-            alt="images"
-          />
-        </a>
         <a href="#">Entrar</a>
       </nav>
     </header>
     <section id="product-details-section" class="dsc-container">
-      <div class="dsc-card">
+      <div class="dsc-card dsc-mb20">
         <div class="dsc-product-details-top dsc-line-bottom">
           <img src="assets/image 3.svg" alt="computador" />
         </div>
@@ -42,10 +36,10 @@
             PageMaker including versions of Lorem Ipsum.
           </p>
           <div class="dsc-category-container">
-          <div class="dsc-card-category">
+          <div class="dsc-category">
             Eletrônicos
           </div>
-          <div class="dsc-card-category">
+          <div class="dsc-category">
             Computadores
           </div>
         </div>
@@ -60,5 +54,6 @@
         </div>
       </div>
     </section>
+  </main>
   </body>
 </html>
