Layout rresponsivo aplicado na tela de detalhes

--- a/Frontend/detalhes.html
+++ b/Frontend/detalhes.html
@@ -13,7 +13,12 @@
     <header>
       <nav class="dsc-container">
         <h1>DSCommerce</h1>
+        <div class="dsc-navbar-right">
+        <div class="dsc-menu-item">
+          <img src="assets/cart-fill-svgrepo-com 1.svg" alt="Carrinho de compras" />
+        </div>
         <a href="#">Entrar</a>
+        </div>
       </nav>
     </header>
     <section id="product-details-section" class="dsc-container">
