--- a/Frontend/carrinho.html
+++ b/Frontend/carrinho.html
@@ -12,12 +12,12 @@
     <header>
       <nav class="dsc-container">
         <h1>DSCommerce</h1>
-          <img
-            class="dsc-carrinho"
-            src="assets/cart-fill-svgrepo-com 1.svg"
-            alt="images"
-          />
-        <a href="#">Entrar</a>
+        <div class="dsc-navbar-right">
+          <div class="dsc-menu-item">
+            <img src="assets/cart-fill-svgrepo-com 1.svg" alt="Carrinho de compras" />
+          </div>
+          <a href="#">Entrar</a>
+          </div>
       </nav>
     </header>
     <section id="cart-container-section" class="dsc-container">
@@ -61,6 +61,7 @@
           </div> 
         </div>
         <div class="dsc-cart-total-container">
+          <span class="dsc-cart-total">Total</span>
          <h3>R$ 15000,00</h3>
         </div>
         </div>
