Listagem de card responsiva

--- a/Frontend/catalogo.html
+++ b/Frontend/catalogo.html
@@ -15,7 +15,7 @@
         <div class="dsc-navbar-right">
           <div class="dsc-menu-item">
             <img
-              src="assets/cart-fill-svgrepo-com 1.svg"
+              src="assets/carrinho.svg"
               alt="Carrinho de compras"
             />
           </div>
@@ -24,28 +24,208 @@
       </nav>
     </header>
     <main>
-      <section id="catalog-section" class="dsc-container">
+      <div id="catalog-section" class="dsc-container">
         <form>
           <button>🔎︎</button>
           <input type="text" placeholder="Nome do produto" />
           <button type="reset">🗙</button>
         </form>
-        <div>
-          <div class="dsc-card">CARD</div>
-          <div class="dsc-card">CARD</div>
-          <div class="dsc-card">CARD</div>
-          <div class="dsc-card">CARD</div>
-          <div class="dsc-card">CARD</div>
-          <div class="dsc-card">CARD</div>
-          <div class="dsc-card">CARD</div>
-          <div class="dsc-card">CARD</div>
-          <div class="dsc-card">CARD</div>
-          <div class="dsc-card">CARD</div>
-          <div class="dsc-card">CARD</div>
-          <div class="dsc-card">CARD</div>
-          <div class="dsc-card">CARD</div>
+
+        <div class="dsc-catalog-cards">
+        <div class="dsc-card">
+          <div class="dsc-catalog-card-top dsc-line-bottom">
+            <img src="assets/Computer.svg" alt="Computer" />
+          </div>
+          <div class="dsc-catalog-card-bottom">
+            <h3>R$ 5000,00</h3>
+            <h4>
+              Computador Gamer XT 
+            </h4>
+          </div>
         </div>
 
+        <div class="dsc-card">
+          <div class="dsc-catalog-card-top dsc-line-bottom">
+            <img src="assets/Computer.svg" alt="Computer" />
+          </div>
+          <div class="dsc-catalog-card-bottom">
+            <h3>R$ 5000,00</h3>
+            <h4>
+              Computador Gamer XT com suporte e 16GB de memória e processador
+              turbo plus
+            </h4>
+          </div>
+        </div>
+
+        <div class="dsc-card">
+          <div class="dsc-catalog-card-top dsc-line-bottom">
+            <img src="assets/Computer.svg" alt="Computer" />
+          </div>
+          <div class="dsc-catalog-card-bottom">
+            <h3>R$ 5000,00</h3>
+            <h4>
+              Computador Gamer XT com suporte e 16GB de memória e processador
+              turbo plus
+            </h4>
+          </div>
+        </div>
+
+        <div class="dsc-card">
+          <div class="dsc-catalog-card-top dsc-line-bottom">
+            <img src="assets/Computer.svg" alt="Computer" />
+          </div>
+          <div class="dsc-catalog-card-bottom">
+            <h3>R$ 5000,00</h3>
+            <h4>
+              Computador Gamer XT com suporte e 16GB de memória e processador
+              turbo plus
+            </h4>
+          </div>
+        </div>
+
+        <div class="dsc-card">
+          <div class="dsc-catalog-card-top dsc-line-bottom">
+            <img src="assets/Computer.svg" alt="Computer" />
+          </div>
+          <div class="dsc-catalog-card-bottom">
+            <h3>R$ 5000,00</h3>
+            <h4>
+              Computador Gamer XT com suporte e 16GB de memória e processador
+              turbo plus
+            </h4>
+          </div>
+        </div>
+
+        <div class="dsc-card">
+          <div class="dsc-catalog-card-top dsc-line-bottom">
+            <img src="assets/Computer.svg" alt="Computer" />
+          </div>
+          <div class="dsc-catalog-card-bottom">
+            <h3>R$ 5000,00</h3>
+            <h4>
+              Computador Gamer XT com suporte e 16GB de memória e processador
+              turbo plus
+            </h4>
+          </div>
+        </div>
+
+        <div class="dsc-card">
+          <div class="dsc-catalog-card-top dsc-line-bottom">
+            <img src="assets/Computer.svg" alt="Computer" />
+          </div>
+          <div class="dsc-catalog-card-bottom">
+            <h3>R$ 5000,00</h3>
+            <h4>
+              Computador Gamer XT com suporte e 16GB de memória e processador
+              turbo plus
+            </h4>
+          </div>
+        </div>
+
+        <div class="dsc-card">
+          <div class="dsc-catalog-card-top dsc-line-bottom">
+            <img src="assets/Computer.svg" alt="Computer" />
+          </div>
+          <div class="dsc-catalog-card-bottom">
+            <h3>R$ 5000,00</h3>
+            <h4>
+              Computador Gamer XT com suporte e 16GB de memória e processador
+              turbo plus
+            </h4>
+          </div>
+        </div>
+
+        <div class="dsc-card">
+          <div class="dsc-catalog-card-top dsc-line-bottom">
+            <img src="assets/Computer.svg" alt="Computer" />
+          </div>
+          <div class="dsc-catalog-card-bottom">
+            <h3>R$ 5000,00</h3>
+            <h4>
+              Computador Gamer XT com suporte e 16GB de memória e processador
+              turbo plus
+            </h4>
+          </div>
+        </div>
+
+        <div class="dsc-card">
+          <div class="dsc-catalog-card-top dsc-line-bottom">
+            <img src="assets/Computer.svg" alt="Computer" />
+          </div>
+          <div class="dsc-catalog-card-bottom">
+            <h3>R$ 5000,00</h3>
+            <h4>
+              Computador Gamer XT com suporte e 16GB de memória e processador
+              turbo plus
+            </h4>
+          </div>
+        </div>
+
+        <div class="dsc-card">
+          <div class="dsc-catalog-card-top dsc-line-bottom">
+            <img src="assets/Computer.svg" alt="Computer" />
+          </div>
+          <div class="dsc-catalog-card-bottom">
+            <h3>R$ 5000,00</h3>
+            <h4>
+              Computador Gamer XT com suporte e 16GB de memória e processador
+              turbo plus
+            </h4>
+          </div>
+        </div>
+
+        <div class="dsc-card">
+          <div class="dsc-catalog-card-top dsc-line-bottom">
+            <img src="assets/Computer.svg" alt="Computer" />
+          </div>
+          <div class="dsc-catalog-card-bottom">
+            <h3>R$ 5000,00</h3>
+            <h4>
+              Computador Gamer XT com suporte e 16GB de memória e processador
+              turbo plus
+            </h4>
+          </div>
+        </div>
+
+        <div class="dsc-card">
+          <div class="dsc-catalog-card-top dsc-line-bottom">
+            <img src="assets/Computer.svg" alt="Computer" />
+          </div>
+          <div class="dsc-catalog-card-bottom">
+            <h3>R$ 5000,00</h3>
+            <h4>
+              Computador Gamer XT com suporte e 16GB de memória e processador
+              turbo plus
+            </h4>
+          </div>
+        </div>
+
+        <div class="dsc-card">
+          <div class="dsc-catalog-card-top dsc-line-bottom">
+            <img src="assets/Computer.svg" alt="Computer" />
+          </div>
+          <div class="dsc-catalog-card-bottom">
+            <h3>R$ 5000,00</h3>
+            <h4>
+              Computador Gamer XT com suporte e 16GB de memória e processador
+              turbo plus
+            </h4>
+          </div>
+        </div>
+
+        <div class="dsc-card">
+          <div class="dsc-catalog-card-top dsc-line-bottom">
+            <img src="assets/Computer.svg" alt="Computer" />
+          </div>
+          <div class="dsc-catalog-card-bottom">
+            <h3>R$ 5000,00</h3>
+            <h4>
+              Computador Gamer XT com suporte e 16GB de memória e processador
+              turbo plus
+            </h4>
+          </div>
+        </div>
+        </div>
         <div class="dsc-btn-next-page">Carregar mais</div>
       </section>
     </main>
