--- a/Frontend/carrinho.html
+++ b/Frontend/carrinho.html
@@ -14,7 +14,7 @@
         <h1>DSCommerce</h1>
         <div class="dsc-navbar-right">
           <div class="dsc-menu-item">
-            <img src="assets/cart-fill-svgrepo-com 1.svg" alt="Carrinho de compras" />
+            <img src="assets/carrinho.svg" alt="Carrinho de compras" />
           </div>
           <a href="#">Entrar</a>
           </div>
@@ -44,7 +44,7 @@
         <div class="dsc-cart-item-container dsc-line-bottom">
           <div class="dsc-cart-item-left">
             <img
-            src="assets/image 3.svg"
+            src="assets/Computer.svg"
             alt="computador"
             />
             <div class="dsc-cart-item-description">
