--- a/Frontend/detalhes.html
+++ b/Frontend/detalhes.html
@@ -15,7 +15,7 @@
         <h1>DSCommerce</h1>
         <div class="dsc-navbar-right">
         <div class="dsc-menu-item">
-          <img src="assets/cart-fill-svgrepo-com 1.svg" alt="Carrinho de compras" />
+          <img src="assets/carrinho.svg" alt="Carrinho de compras" />
         </div>
         <a href="#">Entrar</a>
         </div>
@@ -24,7 +24,7 @@
     <section id="product-details-section" class="dsc-container">
       <div class="dsc-card dsc-mb20">
         <div class="dsc-product-details-top dsc-line-bottom">
-          <img src="assets/image 3.svg" alt="computador" />
+          <img src="assets/Computer.svg" alt="computador" />
         </div>
         <div class="dsc-product-details-bottom">
           <h3>R$ 5000,00</h3>
