--- a/Frontend/catalogo.html
+++ b/Frontend/catalogo.html
@@ -25,8 +25,8 @@
     </header>
     <main>
       <div id="catalog-section" class="dsc-container">
-        <form>
-          <button>🔎︎</button>
+        <form class="dsc-search-bar">
+          <button type="submit">🔎︎</button>
           <input type="text" placeholder="Nome do produto" />
           <button type="reset">🗙</button>
         </form>
@@ -51,8 +51,7 @@
           <div class="dsc-catalog-card-bottom">
             <h3>R$ 5000,00</h3>
             <h4>
-              Computador Gamer XT com suporte e 16GB de memória e processador
-              turbo plus
+              Computador Gamer XT 
             </h4>
           </div>
         </div>
@@ -64,8 +63,7 @@
           <div class="dsc-catalog-card-bottom">
             <h3>R$ 5000,00</h3>
             <h4>
-              Computador Gamer XT com suporte e 16GB de memória e processador
-              turbo plus
+              Computador Gamer XT 
             </h4>
           </div>
         </div>
@@ -77,8 +75,7 @@
           <div class="dsc-catalog-card-bottom">
             <h3>R$ 5000,00</h3>
             <h4>
-              Computador Gamer XT com suporte e 16GB de memória e processador
-              turbo plus
+              Computador Gamer XT 
             </h4>
           </div>
         </div>
@@ -90,8 +87,7 @@
           <div class="dsc-catalog-card-bottom">
             <h3>R$ 5000,00</h3>
             <h4>
-              Computador Gamer XT com suporte e 16GB de memória e processador
-              turbo plus
+              Computador Gamer XT 
             </h4>
           </div>
         </div>
@@ -103,8 +99,7 @@
           <div class="dsc-catalog-card-bottom">
             <h3>R$ 5000,00</h3>
             <h4>
-              Computador Gamer XT com suporte e 16GB de memória e processador
-              turbo plus
+              Computador Gamer XT 
             </h4>
           </div>
         </div>
@@ -116,8 +111,7 @@
           <div class="dsc-catalog-card-bottom">
             <h3>R$ 5000,00</h3>
             <h4>
-              Computador Gamer XT com suporte e 16GB de memória e processador
-              turbo plus
+              Computador Gamer XT 
             </h4>
           </div>
         </div>
@@ -129,8 +123,7 @@
           <div class="dsc-catalog-card-bottom">
             <h3>R$ 5000,00</h3>
             <h4>
-              Computador Gamer XT com suporte e 16GB de memória e processador
-              turbo plus
+              Computador Gamer XT 
             </h4>
           </div>
         </div>
@@ -142,8 +135,7 @@
           <div class="dsc-catalog-card-bottom">
             <h3>R$ 5000,00</h3>
             <h4>
-              Computador Gamer XT com suporte e 16GB de memória e processador
-              turbo plus
+              Computador Gamer XT 
             </h4>
           </div>
         </div>
@@ -155,8 +147,7 @@
           <div class="dsc-catalog-card-bottom">
             <h3>R$ 5000,00</h3>
             <h4>
-              Computador Gamer XT com suporte e 16GB de memória e processador
-              turbo plus
+              Computador Gamer XT 
             </h4>
           </div>
         </div>
@@ -168,8 +159,7 @@
           <div class="dsc-catalog-card-bottom">
             <h3>R$ 5000,00</h3>
             <h4>
-              Computador Gamer XT com suporte e 16GB de memória e processador
-              turbo plus
+              Computador Gamer XT 
             </h4>
           </div>
         </div>
@@ -181,8 +171,7 @@
           <div class="dsc-catalog-card-bottom">
             <h3>R$ 5000,00</h3>
             <h4>
-              Computador Gamer XT com suporte e 16GB de memória e processador
-              turbo plus
+              Computador Gamer XT 
             </h4>
           </div>
         </div>
@@ -194,8 +183,7 @@
           <div class="dsc-catalog-card-bottom">
             <h3>R$ 5000,00</h3>
             <h4>
-              Computador Gamer XT com suporte e 16GB de memória e processador
-              turbo plus
+              Computador Gamer XT 
             </h4>
           </div>
         </div>
@@ -207,8 +195,7 @@
           <div class="dsc-catalog-card-bottom">
             <h3>R$ 5000,00</h3>
             <h4>
-              Computador Gamer XT com suporte e 16GB de memória e processador
-              turbo plus
+              Computador Gamer XT 
             </h4>
           </div>
         </div>
@@ -220,8 +207,7 @@
           <div class="dsc-catalog-card-bottom">
             <h3>R$ 5000,00</h3>
             <h4>
-              Computador Gamer XT com suporte e 16GB de memória e processador
-              turbo plus
+              Computador Gamer XT 
             </h4>
           </div>
         </div>
