Corrigindo CSS da tela de login

--- a/Frontend/login.html
+++ b/Frontend/login.html
@@ -28,7 +28,8 @@
           <h2>Login</h2>
           <div class="dsc-form-controls-container">
             <div>
-              <input class="dsc-form-control" type="text" placeholder="Email">
+              <input class="dsc-form-control dsc-input-error" type="text" placeholder="Email">
+              <div class="dsc-form-error">Campo Obrigatório</div>
             </div>
             <div>
               <input class="dsc-form-control" type="password" placeholder="Senha">
