--- a/Frontend/form.html
+++ b/Frontend/form.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -25,17 +24,28 @@
       </nav>
     </header>
     <div id="product-form-section" class="dsc-container">
-      
-      <div class=".dsc-product-form-container">
+      <div class="dsc-product-form-container">
         <div class="dsc-card dsc-form">
           <h2>Dados do Produto</h2>
           <div class="dsc-form-controls-container">
             <div>
-              <input class="dsc-form-control dsc-input-error" type="text" placeholder="Email">
-              <div class="dsc-form-error">Campo Obrigatório</div>
+              <input class="dsc-form-control" type="text" placeholder="Nome">
             </div>
             <div>
-              <input class="dsc-form-control" type="password" placeholder="Senha">
+              <input class="dsc-form-control" type="text" placeholder="Preço">
+            </div>
+            <div>
+              <input class="dsc-form-control" type="text" placeholder="Imagem">
+            </div>
+            <div>
+              <select class="dsc-form-control dsc-select" required>
+                <option value="" disabled selected>Categorias</option>
+                <option value="1">Valor 1</option>
+                <option value="2">Valor 2</option>
+              </select>
+            </div>
+            <div>
+              <textarea class="dsc-form-control dsc-textarea" placeholder="Descrição"></textarea>
             </div>
           </div>
           <div class="dsc-product-form-button">
