Layout da tabela em construção

--- a/Frontend/listing.html
+++ b/Frontend/listing.html
@@ -38,6 +38,23 @@
           <button type="reset">🗙</button>
         </form>
 
+        <table class="dsc-table ">
+          <thead>
+            <th></th>
+            <th>Nome</th>
+            <th></th>
+            <th></th>
+          </thead>
+          <tbody>
+            <tr>
+              <td><img class="dsc-product-listing-image" src="assets/Computer.svg" alt="Computer"></td>
+              <td>Computador Gamer XT Plus Ultra</td>
+              <td><img src="assets/Edit.svg" alt="Edit"></td>
+              <td><img src="assets/Delete.svg" alt="Delete"></td>
+            </tr>
+            
+          </tbody>
+        </table>
         
         <button class="dsc-btn-next-page">Carregar mais</button>
       </section>
