product listing aplicated

--- a/Frontend/listing.html
+++ b/Frontend/listing.html
@@ -38,21 +38,114 @@
           <button type="reset">🗙</button>
         </form>
 
-        <table class="dsc-table ">
-          <thead>
-            <th></th>
-            <th>Nome</th>
-            <th></th>
-            <th></th>
-          </thead>
-          <tbody>
+        <table class="dsc-table">
+          <thead class="dsc-thead dsc-line-bottom">
             <tr>
-              <td><img class="dsc-product-listing-image" src="assets/Computer.svg" alt="Computer"></td>
-              <td>Computador Gamer XT Plus Ultra</td>
-              <td><img src="assets/Edit.svg" alt="Edit"></td>
-              <td><img src="assets/Delete.svg" alt="Delete"></td>
+            <th class="dsc-tb576">ID</th>
+            <th></th>
+            <th class="dsc-tb768">Preço</th>
+            <th class="dsc-txt-left">Nome</th>
+            <th></th>
+            <th></th>
+          </tr>
+          </thead>
+          <tbody class="dsc-tbody">
+            <tr class="dsc-line-bottom">
+              <td class="dsc-tb576">341</td>
+              <td class="dsc-td01"><img class="dsc-product-listing-image" src="assets/Computer.svg" alt="Computer"></td>
+              <td class="dsc-tb768">R$ 5000,00</td>
+              <td class="dsc-txt-left">Computador Gamer XT Plus Ultra</td>
+              <td class="dsc-td03"><img class="dsc-product-listing-btn" src="assets/Edit.svg" alt="Edit"></td>
+              <td class="dsc-td04"><img class="dsc-product-listing-btn" src="assets/Delete.svg" alt="Delete"></td>
             </tr>
-            
+            <tr class="dsc-line-bottom">
+              <td class="dsc-tb576">341</td>
+              <td class="dsc-td01"><img class="dsc-product-listing-image" src="assets/Computer.svg" alt="Computer"></td>
+              <td class="dsc-tb768">R$ 5000,00</td>
+              <td class="dsc-txt-left">Computador Gamer XT Plus Ultra</td>
+              <td class="dsc-td03"><img class="dsc-product-listing-btn" src="assets/Edit.svg" alt="Edit"></td>
+              <td class="dsc-td04"><img class="dsc-product-listing-btn" src="assets/Delete.svg" alt="Delete"></td>
+            </tr>
+            <tr class="dsc-line-bottom">
+              <td class="dsc-tb576">341</td>
+              <td class="dsc-td01"><img class="dsc-product-listing-image" src="assets/Computer.svg" alt="Computer"></td>
+              <td class="dsc-tb768">R$ 5000,00</td>
+              <td class="dsc-txt-left">Computador Gamer XT Plus Ultra</td>
+              <td class="dsc-td03"><img class="dsc-product-listing-btn" src="assets/Edit.svg" alt="Edit"></td>
+              <td class="dsc-td04"><img class="dsc-product-listing-btn" src="assets/Delete.svg" alt="Delete"></td>
+            </tr>
+            <tr class="dsc-line-bottom">
+              <td class="dsc-tb576">341</td>
+              <td class="dsc-td01"><img class="dsc-product-listing-image" src="assets/Computer.svg" alt="Computer"></td>
+              <td class="dsc-tb768">R$ 5000,00</td>
+              <td class="dsc-txt-left">Computador Gamer XT Plus Ultra</td>
+              <td class="dsc-td03"><img class="dsc-product-listing-btn" src="assets/Edit.svg" alt="Edit"></td>
+              <td class="dsc-td04"><img class="dsc-product-listing-btn" src="assets/Delete.svg" alt="Delete"></td>
+            </tr>
+            <tr class="dsc-line-bottom">
+              <td class="dsc-tb576">341</td>
+              <td class="dsc-td01"><img class="dsc-product-listing-image" src="assets/Computer.svg" alt="Computer"></td>
+              <td class="dsc-tb768">R$ 5000,00</td>
+              <td class="dsc-txt-left">Computador Gamer XT Plus Ultra</td>
+              <td class="dsc-td03"><img class="dsc-product-listing-btn" src="assets/Edit.svg" alt="Edit"></td>
+              <td class="dsc-td04"><img class="dsc-product-listing-btn" src="assets/Delete.svg" alt="Delete"></td>
+            </tr>
+            <tr class="dsc-line-bottom">
+              <td class="dsc-tb576">341</td>
+              <td class="dsc-td01"><img class="dsc-product-listing-image" src="assets/Computer.svg" alt="Computer"></td>
+              <td class="dsc-tb768">R$ 5000,00</td>
+              <td class="dsc-txt-left">Computador Gamer XT Plus Ultra</td>
+              <td class="dsc-td03"><img class="dsc-product-listing-btn" src="assets/Edit.svg" alt="Edit"></td>
+              <td class="dsc-td04"><img class="dsc-product-listing-btn" src="assets/Delete.svg" alt="Delete"></td>
+            </tr>
+            <tr class="dsc-line-bottom">
+              <td class="dsc-tb576">341</td>
+              <td class="dsc-td01"><img class="dsc-product-listing-image" src="assets/Computer.svg" alt="Computer"></td>
+              <td class="dsc-tb768">R$ 5000,00</td>
+              <td class="dsc-txt-left">Computador Gamer XT Plus Ultra</td>
+              <td class="dsc-td03"><img class="dsc-product-listing-btn" src="assets/Edit.svg" alt="Edit"></td>
+              <td class="dsc-td04"><img class="dsc-product-listing-btn" src="assets/Delete.svg" alt="Delete"></td>
+            </tr>
+            <tr class="dsc-line-bottom">
+              <td class="dsc-tb576">341</td>
+              <td class="dsc-td01"><img class="dsc-product-listing-image" src="assets/Computer.svg" alt="Computer"></td>
+              <td class="dsc-tb768">R$ 5000,00</td>
+              <td class="dsc-txt-left">Computador Gamer XT Plus Ultra</td>
+              <td class="dsc-td03"><img class="dsc-product-listing-btn" src="assets/Edit.svg" alt="Edit"></td>
+              <td class="dsc-td04"><img class="dsc-product-listing-btn" src="assets/Delete.svg" alt="Delete"></td>
+            </tr>
+            <tr class="dsc-line-bottom">
+              <td class="dsc-tb576">341</td>
+              <td class="dsc-td01"><img class="dsc-product-listing-image" src="assets/Computer.svg" alt="Computer"></td>
+              <td class="dsc-tb768">R$ 5000,00</td>
+              <td class="dsc-txt-left">Computador Gamer XT Plus Ultra</td>
+              <td class="dsc-td03"><img class="dsc-product-listing-btn" src="assets/Edit.svg" alt="Edit"></td>
+              <td class="dsc-td04"><img class="dsc-product-listing-btn" src="assets/Delete.svg" alt="Delete"></td>
+            </tr>
+            <tr class="dsc-line-bottom">
+              <td class="dsc-tb576">341</td>
+              <td class="dsc-td01"><img class="dsc-product-listing-image" src="assets/Computer.svg" alt="Computer"></td>
+              <td class="dsc-tb768">R$ 5000,00</td>
+              <td class="dsc-txt-left">Computador Gamer XT Plus Ultra</td>
+              <td class="dsc-td03"><img class="dsc-product-listing-btn" src="assets/Edit.svg" alt="Edit"></td>
+              <td class="dsc-td04"><img class="dsc-product-listing-btn" src="assets/Delete.svg" alt="Delete"></td>
+            </tr>
+            <tr class="dsc-line-bottom">
+              <td class="dsc-tb576">341</td>
+              <td class="dsc-td01"><img class="dsc-product-listing-image" src="assets/Computer.svg" alt="Computer"></td>
+              <td class="dsc-tb768">R$ 5000,00</td>
+              <td class="dsc-txt-left">Computador Gamer XT Plus Ultra</td>
+              <td class="dsc-td03"><img class="dsc-product-listing-btn" src="assets/Edit.svg" alt="Edit"></td>
+              <td class="dsc-td04"><img class="dsc-product-listing-btn" src="assets/Delete.svg" alt="Delete"></td>
+            </tr>
+            <tr class="dsc-line-bottom">
+              <td class="dsc-tb576">341</td>
+              <td class="dsc-td01"><img class="dsc-product-listing-image" src="assets/Computer.svg" alt="Computer"></td>
+              <td class="dsc-tb768">R$ 5000,00</td>
+              <td class="dsc-txt-left">Computador Gamer XT Plus Ultra</td>
+              <td class="dsc-td03"><img class="dsc-product-listing-btn" src="assets/Edit.svg" alt="Edit"></td>
+              <td class="dsc-td04"><img class="dsc-product-listing-btn" src="assets/Delete.svg" alt="Delete"></td>
+            </tr>
           </tbody>
         </table>
         
