--- a/Frontend/confirmacao.html
+++ b/Frontend/confirmacao.html
@@ -9,18 +9,24 @@
     <link rel="stylesheet" href="./css/confirmacao.css" />
   </head>
   <body>
-    <header>
+    <header class="dsc-header-client">
       <nav class="dsc-container">
         <h1>DSCommerce</h1>
         <div class="dsc-navbar-right">
+          <div class="dsc-menu-itens-container">
+          <div class="dsc-menu-item">
+            <img src="assets/admin.svg" alt="Carrinho de compras" />
+          </div>
           <div class="dsc-menu-item">
             <img src="assets/carrinho.svg" alt="Carrinho de compras" />
           </div>
+          
           <div class="dsc-logger-user">
           <p>Maria Silva</p>
           <a href="#">Sair</a>
           </div>
           </div>
+        </div>
       </nav>
     </header>
     <section id="confirmation-section" class="dsc-container">
