--- a/Frontend/detalhes.html
+++ b/Frontend/detalhes.html
@@ -9,7 +9,7 @@
   </head>
   <main>
   <body>
-    <header>
+    <header class="dsc-header-client">
       <nav class="dsc-container">
         <h1>DSCommerce</h1>
         <div class="dsc-navbar-right">
