--- a/Frontend/form.html
+++ b/Frontend/form.html
@@ -9,17 +9,23 @@
   </head>
   <main>
   <body>
-    <header>
+    <header class="dsc-header-admin">
       <nav class="dsc-container">
-        <h1>DSCommerce</h1>
+        <h1>DSAdmin</h1>
         <div class="dsc-navbar-right">
-        <div class="dsc-menu-item">
-          <img src="assets/carrinho.svg" alt="Carrinho de compras" />
-        </div>
-        <div class="dsc-logger-user">
-        <p>Maria Silva</p>
+          <div class="dsc-menu-itens-container">
+          <div class="dsc-menu-item">
+            <img src="assets/home.svg" alt="Início" />
+          </div>
+          <div class="dsc-menu-item">
+            <img src="assets/products.svg" alt="Cadastro de produtos" />
+          </div>
+          
+          <div class="dsc-logger-user">
+          <p>Maria Silva</p>
           <a href="#">Sair</a>
-        </div>
+          </div>
+          </div>
         </div>
       </nav>
     </header>
