--- a/Frontend/login.html
+++ b/Frontend/login.html
@@ -10,7 +10,7 @@
   </head>
   <main>
   <body>
-    <header>
+    <header class="dsc-header-client">
       <nav class="dsc-container">
         <h1>DSCommerce</h1>
         <div class="dsc-navbar-right">
