Processo de criação de telas aplicado

--- a/Frontend/form.html
+++ b/Frontend/form.html
@@ -17,8 +17,14 @@
           <div class="dsc-menu-item">
             <img src="assets/home.svg" alt="Início" />
           </div>
+          <div class="dsc-menu-inicio">
+            <p>Inicio</p>
+          </div>
           <div class="dsc-menu-item">
             <img src="assets/products.svg" alt="Cadastro de produtos" />
+          </div>
+          <div class="dsc-menu-inicio">
+            <p>Produtos</p>
           </div>
           
           <div class="dsc-logger-user">
